[package]
name = "memor"
version = "0.1.0"
authors = ["Yohei Tamura <tamuhey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"

[lib]
proc-macro = true